--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-toastify": "^11.0.5",
     "sharp": "^0.32.6",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
