--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-toastify": "^11.0.5",
